--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="project-card">
                 <a href="#"><img src="img/outdoor.jpg" alt="Neton Luxe Retreat" ></a>
                 <h3>Neton Luxe Retreat</h3>
-                <p>A fintech payment processing system.</p>
+                <p>A hotel website showcasing services, amenities, and easy online booking</p>
             </div>
             <div class="project-card">
                 <a href="#"><img src="img/hostel-booking.jpg" alt="Hostel Management System"></a>
